# DCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  sync_docs.yml
db/: qdrant_client.py
mcp_server/: server.py
providers/: provider.json
scraper/: chunker.py  embedder.py  fetcher.py
tests/: README.md  conftest.py  test_chunker.py  test_embedder.py  test_fetcher.py  test_qdrant_client.py  test_server.py
